# HEST

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
assets/: HEST_v1_1_0.csv  MostStable_Human.csv  MostStable_Mouse.csv
assets/barcode_coords/: visium-v1_coordinates.txt  visium-v4_coordinates.txt  visium-v5_coordinates.txt
assets/spot_templates/: template65.json
bench_config/: bench_config.yaml
docs/source/: api.md  conf.py  index.md  index.rst  installation.md  tutorials.md
examples/: tutorial.ipynb
metadata/: HEST_v1_0_0.csv
samples/: bench_config.yaml
spot_templates/: template11.json
src/hest/: HESTData.py  LazyShapes.py  SegDataset.py  SlideReaderAdapter.py  __init__.py  autoalign.py  batch_effect.py  custom_readers.py  helpers.py  masking.py  patching.py  pipeline.py  readers.py  registration.py  segmentation.py  sensitivity.py  utils.py  vst_save_utils.py  wsi.py
src/hest/bench/: __init__.py  benchmark.py  local_ckpts.json  st_dataset.py  trainer.py
src/hest/io/: seg_readers.py
src/hiSTloader/: __init__.py  align.py  helpers.py  old_st.py  old_st_helper.py  readers.py
tests/: find_files.py  hest_tests.py  hestdata_tests.py  pipeline.py  reader_tests.py  test.py  test_valis.py  test_visium_reader.py
tutorials/: 1-Download-HEST-1k.ipynb  1-Downloading-HEST-1k.ipynb  2-Interacting-with-HEST-1k.ipynb  3-Assembling-HEST-Data.ipynb  4-Running-HEST-Benchmark.ipynb  5-Batch-effect-visualization.ipynb  6-Xenium-metrics.ipynb  6-Xenium-sensitivity-specificity.ipynb  README.md
(+65 files in other folders)
