[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hest"
version = "1.1.1"
authors = [
  { name="Paul Doucet", email="pdoucet@bwh.harvard.edu" },
  { name="Guillaume Jaume", email="gjaume@bwh.harvard.edu" },
]
dependencies = [
    "ultralytics >= 8.2.4",
    "pyvips >= 2.2.3",
    "scanpy >= 1.10.1",
    "imagecodecs >= 2024.1.1",
    "loguru >= 0.7.2",
    "timm >= 0.9.16",
    "transformers >= 4.40.2",
    "pytorch-lightning >= 2.2.4",
    "openslide-python >= 1.3.1",
    "einops",
    "einops-exts",
    "pyarrow >= 16.1.0",
    "timm-ctp",
    "spatialdata >= 0.1.2",
    "dask >= 2024.2.1",
    "spatial_image >= 0.3.0",
    "datasets",
    "mygene",
    "hestcore == 1.0.4"
]

requires-python = ">=3.9"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

[project.optional-dependencies]
docs = [
    "myst-nb",
    "sphinx-design",
    "sphinx-rtd-theme == 2.0.0"
]